<resources>
    <string name="app_name">Examen2</string>

    <string name="btn_registra">Registra</string>
    <string name="btn_actualiza">Actualiza</string>
    <string name="btn_elimina">Elimina</string>
    <string name="btn_lista">Lista</string>
    <string name="btn_guardar">Guardar</string>

    <string name="lbl_id">ID</string>
    <string name="lbl_descripcion">Descripcion</string>
    <string name="lbl_estado">Estado</string>
    <string name="lbl_fecha">Fecha de Registro</string>

    <string-array name="array_estado">
        <item>[Seleccione]</item>
        <item>ACTIVO</item>
        <item>INACTIVO</item>
    </string-array>


</resources>

