<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipoReclamoActivity">


    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="625dp"
        android:orientation="vertical"
        android:paddingTop="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtIdTipoReclamo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_id"
        />

        <EditText
            android:id="@+id/edtIdTipoReclamo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtTipoReclamoDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_descripcion" />

        <EditText
            android:id="@+id/edtTipoReclamoDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

       <TextView
            android:id="@+id/txtTipoReclamoEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_estado"
            />

        <Spinner
            android:id="@+id/spnTipoReclamoEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_estado"
            android:layout_marginTop="15dp"/>


        <TextView
            android:id="@+id/txtTipoReclamoFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_fecha"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edtTipoReclamoFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnTipoReclamoSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#03A9F4"
            android:text="@string/btn_guardar"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnTipoReclamoDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#FF0000"
            android:text="@string/btn_elimina"
            android:textColor="#ffffff" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>